--- a/Assignment_3.ipynb
+++ b/Assignment_3.ipynb
@@ -2197,7 +2197,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check if CUDA is available\n",
+        "# Checkig if CUDA is available\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(f\"Using device: {device}\")"
       ],
@@ -2222,10 +2222,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load the dataset\n",
+        "# Loading the  dataset\n",
         "df = pd.read_json(\"hf://datasets/Amod/mental_health_counseling_conversations/combined_dataset.json\", lines=True)\n",
         "\n",
-        "# Create a Dataset object\n",
+        "# Creating a Dataset object\n",
         "dataset = Dataset.from_pandas(df)\n",
         "df.head()"
       ],
@@ -2548,7 +2548,7 @@
       "cell_type": "code",
       "source": [
         "# Load a pre-trained model and tokenizer\n",
-        "model_name = \"facebook/bart-base\"  # You can change this to any suitable seq2seq model\n",
+        "model_name = \"facebook/bart-base\"\n",
         "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
         "model = AutoModelForSeq2SeqLM.from_pretrained(model_name)\n",
         "# Tokenize the dataset\n",
@@ -2739,7 +2739,7 @@
         "    logging_steps=10,\n",
         "    save_strategy=\"epoch\",\n",
         "    prediction_loss_only=True,\n",
-        "    no_cuda=not torch.cuda.is_available(),  # Use CUDA if available\n",
+        "    no_cuda=not torch.cuda.is_available(),\n",
         ")\n",
         "\n",
         "# Define the Trainer\n",
