--- a/assignment_3.ipynb
+++ b/assignment_3.ipynb
@@ -4141,11 +4141,11 @@
         "!pip install transformers datasets"
       ],
       "metadata": {
-        "id": "zh0yUCCa9nHB",
-        "outputId": "a52f04a7-1061-4e1d-d840-42f45b0f60ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zh0yUCCa9nHB",
+        "outputId": "a52f04a7-1061-4e1d-d840-42f45b0f60ff"
       },
       "execution_count": 1,
       "outputs": [
@@ -4237,7 +4237,7 @@
         "nltk.download('stopwords', quiet=True)\n",
         "\n",
         "# Load the AG News dataset\n",
-        "dataset = load_dataset(\"ag_news\")\n",
+        "datasetUsed = load_dataset(\"ag_news\")\n",
         "\n",
         "# Define category names\n",
         "id2label = {0: \"World\", 1: \"Sports\", 2: \"Business\", 3: \"Sci/Tech\"}\n",
@@ -4245,8 +4245,6 @@
         "\n"
       ],
       "metadata": {
-        "id": "55hTwiPO9nJ1",
-        "outputId": "670c06c7-abfa-4928-bdff-6a422a9cad2f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 301,
@@ -4307,7 +4305,9 @@
             "6ff19bb13cf4454d8a95bdbc98af01f9",
             "094df0d89308403889aaff5f0b0d05ef"
           ]
-        }
+        },
+        "id": "55hTwiPO9nJ1",
+        "outputId": "670c06c7-abfa-4928-bdff-6a422a9cad2f"
       },
       "execution_count": 2,
       "outputs": [
@@ -4399,13 +4399,11 @@
       "cell_type": "code",
       "source": [
         "# Load pre-trained ALBERT tokenizer and model\n",
-        "model_name = \"albert-base-v2\"\n",
-        "tokenizer = AlbertTokenizer.from_pretrained(model_name)\n",
-        "model = AlbertForSequenceClassification.from_pretrained(model_name, num_labels=4)"
+        "name_ofthe_model = \"albert-base-v2\"\n",
+        "tokenizerUsed = AlbertTokenizer.from_pretrained(name_ofthe_model)\n",
+        "model = AlbertForSequenceClassification.from_pretrained(name_ofthe_model, num_labels=4)"
       ],
       "metadata": {
-        "id": "rwEcDPUj9nMr",
-        "outputId": "fdf7daa5-a399-4576-d5ea-2c52604487c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 212,
@@ -4466,7 +4464,9 @@
             "efb371835cf2451bb30d4095b036a4aa",
             "2e344236ccee4d8b89f816993a8a9f4a"
           ]
-        }
+        },
+        "id": "rwEcDPUj9nMr",
+        "outputId": "fdf7daa5-a399-4576-d5ea-2c52604487c7"
       },
       "execution_count": 3,
       "outputs": [
@@ -4555,9 +4555,9 @@
       "source": [
         "# Tokenize the dataset\n",
         "def tokenize_function(examples):\n",
-        "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True, max_length=128)\n",
+        "    return tokenizerUsed(examples[\"text\"], padding=\"max_length\", truncation=True, max_length=128)\n",
         "\n",
-        "tokenized_datasets = dataset.map(tokenize_function, batched=True)\n",
+        "tokenized_datasets = datasetUsed.map(tokenize_function, batched=True)\n",
         "tokenized_datasets = tokenized_datasets.remove_columns([\"text\"])\n",
         "tokenized_datasets = tokenized_datasets.rename_column(\"label\", \"labels\")\n",
         "tokenized_datasets.set_format(\"torch\")\n",
@@ -4567,8 +4567,6 @@
         "eval_dataset = tokenized_datasets[\"test\"].shuffle(seed=42).select(range(1000))"
       ],
       "metadata": {
-        "id": "U4nAeWWg9nPm",
-        "outputId": "570a3a89-00b3-40ae-f6c9-e03c8d35af64",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81,
@@ -4596,7 +4594,9 @@
             "bab9388b460249c08d05ad3cb7e42fba",
             "6c43c4d65a0b43aea7badf96bc8d36b1"
           ]
-        }
+        },
+        "id": "U4nAeWWg9nPm",
+        "outputId": "570a3a89-00b3-40ae-f6c9-e03c8d35af64"
       },
       "execution_count": 4,
       "outputs": [
@@ -4682,12 +4682,12 @@
         "print(eval_results)"
       ],
       "metadata": {
-        "id": "Dz9dWLmO9nVr",
-        "outputId": "e45fa48c-20d4-4182-886f-f0091cb382ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 296
-        }
+        },
+        "id": "Dz9dWLmO9nVr",
+        "outputId": "e45fa48c-20d4-4182-886f-f0091cb382ad"
       },
       "execution_count": 6,
       "outputs": [
@@ -4801,12 +4801,12 @@
         "labels = predictions.label_ids"
       ],
       "metadata": {
-        "id": "HkO9V3uJ9nYg",
-        "outputId": "394365ed-1d4f-4dc4-e361-6866611cfa80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "HkO9V3uJ9nYg",
+        "outputId": "394365ed-1d4f-4dc4-e361-6866611cfa80"
       },
       "execution_count": 7,
       "outputs": [
@@ -4868,7 +4868,7 @@
         "\n",
         "\n",
         "# Text length vs. Prediction accuracy\n",
-        "eval_texts = dataset['test'].select(range(1000))['text']  # Match the size of eval_dataset\n",
+        "eval_texts = datasetUsed['test'].select(range(1000))['text']  # Match the size of eval_dataset\n",
         "text_lengths = [len(text.split()) for text in eval_texts]\n",
         "correct_predictions = labels == preds\n",
         "\n",
@@ -4887,12 +4887,12 @@
         "\n"
       ],
       "metadata": {
-        "id": "1YNc71Zz9nbd",
-        "outputId": "e798b998-a1c0-4e07-e555-75320044b127",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "1YNc71Zz9nbd",
+        "outputId": "e798b998-a1c0-4e07-e555-75320044b127"
       },
       "execution_count": 8,
       "outputs": [
@@ -4943,11 +4943,11 @@
         "    print(', '.join([word for word, _ in top_words]))"
       ],
       "metadata": {
-        "id": "2YRLuKTl9nem",
-        "outputId": "737692f9-6abf-461a-d1fd-59c4331c0cad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2YRLuKTl9nem",
+        "outputId": "737692f9-6abf-461a-d1fd-59c4331c0cad"
       },
       "execution_count": 9,
       "outputs": [
